# vehicle-stream-team-project

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Changelog.rst  README.md  requirements.txt  setup.cfg  test.py
.github/workflows/: python-app.yml
cleaning/: cleaning.ipynb
data/cleaning/: readme.md
data/normal_rides/: Rides_2021-07.xlsx  Rides_2021-08.xlsx  readme.md
data/other/: readme.md
data/regression/: readme.md
data/simulated/: readme.md
data/vehicle_data/: readme.md
test/: test_unit.py
tests/: unit-tests.py
vehicle_stream_pipeline/: analyse_before_cleaning.ipynb  cleaning.ipynb  combine_ride_execution.py  combined_data.py  connect_to_mysql.py  connect_to_mysql_local.py  create_eventlog.ipynb  data_cleaning.py  data_cleaning_execution.py  detect.ipynb  detect_inconsistencies.py  eda_for_presentation.ipynb  functions_detect_inconsistencies.py  hello_world.py  hotSpot_map.html  metrics_for_regression_execution.py  playground.ipynb  ride_simulation.ipynb  ride_simulation_execution.py  short_path.ipynb  simulation_viz.ipynb  temp-plot.html  temp_researchQ copy.ipynb  temp_researchQ.ipynb  test.ipynb  test_database.ipynb  test_ride_simulation.ipynb  test_ride_simulations.ipynb  utils.py  vehicle_matching.ipynb  walkthrough.ipynb
vehicle_stream_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vehicle_stream_pipeline/.ipynb_checkpoints/: test-checkpoint.ipynb
vehicle_stream_pipeline/dashboard/: build_dashboard.py
vehicle_stream_pipeline/other/: connect_to_sharepoint.py
vehicle_stream_pipeline/utils/: data_cleaning.py  (+3 more)
(+3 files in other folders)
