[metadata]
name = vehicle_stream_pipeline
description = Team project - vehicle stream data
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric Chittka, Jan-Paul Briem, Marius Jost, Lukas Dierkes
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independet

[options]
packages = find:
install_requires =
    pandas>=1
python_requires = >=3.6

[options.packages.find]
exclude =tests
